include/crispasr_session.h

struct crispasr_align_result;
typedef struct crispasr_align_result crispasr_align_result;
struct crispasr_diarize_opts_abi;
typedef struct crispasr_diarize_opts_abi crispasr_diarize_opts_abi;
struct crispasr_diarize_seg_abi;
typedef struct crispasr_diarize_seg_abi crispasr_diarize_seg_abi;
struct crispasr_diarize_turn_abi;
typedef struct crispasr_diarize_turn_abi crispasr_diarize_turn_abi;
struct crispasr_session;
typedef struct crispasr_session crispasr_session;
struct crispasr_session_result;
typedef struct crispasr_session_result crispasr_session_result;
struct crispasr_stream;
typedef struct crispasr_stream crispasr_stream;
struct crispasr_vad_abi_opts;
typedef struct crispasr_vad_abi_opts crispasr_vad_abi_opts;
CRISPASR_SESSION_API void crispasr_stream_close(crispasr_stream* s);
CRISPASR_SESSION_API int crispasr_stream_feed(crispasr_stream* s, const float* pcm, int n_samples);
CRISPASR_SESSION_API int crispasr_stream_get_text(crispasr_stream* s, char* out_text, int out_cap, double* out_t0_s,
                                                  double* out_t1_s, int64_t* out_counter);
CRISPASR_SESSION_API int crispasr_stream_flush(crispasr_stream* s);
CRISPASR_SESSION_API void crispasr_stream_set_live_decode(crispasr_stream* s, int enabled);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_lang(crispasr_session* s, const float* pcm,
                                                                               int n_samples, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_vad_lang(
    crispasr_session* s, const float* pcm, int n_samples, int sample_rate, const char* vad_model_path,
    const crispasr_vad_abi_opts* opts_or_null, const char* language);
CRISPASR_SESSION_API int crispasr_diarize_segments_abi(const float* left_pcm, const float* right_pcm, int32_t n_samples,
                                                       int32_t is_stereo, crispasr_diarize_seg_abi* segs,
                                                       int32_t n_segs, const crispasr_diarize_opts_abi* opts);
// 0.8.30+ (issue #395): diarize AND hand back the speaker turns the method
// derived from the audio, so a caller can split one of its own segments that
// spans a speaker change — labelling alone can never resolve finer than the
// segment grid the caller sent in. Only FoxNose (method 4) derives turns; the
// other methods report 0, which is not an error.
//
// A NEW SYMBOL rather than a signature change, so the existing ABI stays
// stable (same append-only convention as crispasr_diarize_opts_abi).
// `out_turns == NULL, n_turns_cap == 0, out_n_turns == NULL` behaves exactly
// like crispasr_diarize_segments_abi.
//
// `out_n_turns`, when non-NULL, always receives the TOTAL turn count — also
// when it exceeds n_turns_cap, so a caller can size and retry (at the cost of
// a second full pass: the ABI keeps no state between calls). `out_turns`,
// when non-NULL, receives up to n_turns_cap turns.
//
// Turn timestamps are centiseconds on the SAME absolute timeline as
// crispasr_diarize_seg_abi (i.e. `opts->slice_t0_cs` is already added back),
// so turns and caller segments compare directly.
//
// Returns 0 on success, 2 when a turn buffer was given and could not hold
// every turn (the segments are still fully labelled and the first n_turns_cap
// turns are still written), 1 on model load failure, -1 on invalid arguments.
CRISPASR_SESSION_API int crispasr_diarize_segments_turns_abi(const float* left_pcm, const float* right_pcm,
                                                             int32_t n_samples, int32_t is_stereo,
                                                             crispasr_diarize_seg_abi* segs, int32_t n_segs,
                                                             const crispasr_diarize_opts_abi* opts,
                                                             crispasr_diarize_turn_abi* out_turns, int32_t n_turns_cap,
                                                             int32_t* out_n_turns);
CRISPASR_SESSION_API int crispasr_detect_language_pcm(const float* samples, int32_t n_samples, int32_t method,
                                                      const char* model_path, int32_t n_threads, int32_t use_gpu,
                                                      int32_t gpu_device, int32_t flash_attn, char* out_lang_buf,
                                                      int32_t out_lang_cap, float* out_confidence);
CRISPASR_SESSION_API crispasr_align_result* crispasr_align_words_abi(const char* aligner_model, const char* transcript,
                                                                     const float* samples, int32_t n_samples,
                                                                     int64_t t_offset_cs, int32_t n_threads);
CRISPASR_SESSION_API int crispasr_align_result_n_words(crispasr_align_result* r);
CRISPASR_SESSION_API const char* crispasr_align_result_word_text(crispasr_align_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_align_result_word_t0(crispasr_align_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_align_result_word_t1(crispasr_align_result* r, int i);
CRISPASR_SESSION_API void crispasr_align_result_free(crispasr_align_result* r);
CRISPASR_SESSION_API int crispasr_cache_ensure_file_abi(const char* filename, const char* url, int32_t quiet,
                                                        const char* cache_dir_override, char* out_buf, int32_t out_cap);
CRISPASR_SESSION_API int crispasr_cache_dir_abi(const char* cache_dir_override, char* out_buf, int32_t out_cap);
CRISPASR_SESSION_API int crispasr_registry_lookup_abi(const char* backend, char* out_filename, int32_t filename_cap,
                                                      char* out_url, int32_t url_cap, char* out_size, int32_t size_cap);
CRISPASR_SESSION_API int crispasr_registry_lookup_by_filename_abi(const char* filename, char* out_filename,
                                                                  int32_t filename_cap, char* out_url, int32_t url_cap,
                                                                  char* out_size, int32_t size_cap);
CRISPASR_SESSION_API int crispasr_registry_list_backends_abi(char* out_csv, int32_t out_cap);
// Return the artifact count for a backend's exact `-m auto` default bundle,
// or 0 when the backend is unknown. On success, also writes the canonical
// backend key and registry licence (which may be empty). Negative values are
// argument/buffer errors.
CRISPASR_SESSION_API int crispasr_registry_default_bundle_info_abi(const char* backend, char* out_backend,
                                                                   int32_t backend_cap, char* out_license,
                                                                   int32_t license_cap,
                                                                   int32_t* out_requires_acceptance);
// Return one default-bundle artifact by index. 0 = success, 1 = unknown
// backend/index, -1 = invalid arguments, 2 = an output buffer is too small.
CRISPASR_SESSION_API int crispasr_registry_default_bundle_artifact_abi(const char* backend, int32_t index,
                                                                       int32_t* out_kind, char* out_filename,
                                                                       int32_t filename_cap, char* out_url,
                                                                       int32_t url_cap, char* out_size,
                                                                       int32_t size_cap);
CRISPASR_SESSION_API int crispasr_session_result_n_segments(crispasr_session_result* r);
CRISPASR_SESSION_API const char* crispasr_session_result_segment_text(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_session_result_segment_t0(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_session_result_segment_t1(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int crispasr_session_result_n_words(crispasr_session_result* r, int i_seg);
CRISPASR_SESSION_API const char* crispasr_session_result_word_text(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API int64_t crispasr_session_result_word_t0(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API int64_t crispasr_session_result_word_t1(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API float crispasr_session_result_word_p(crispasr_session_result* r, int i_seg, int i_word);
// Whisper's per-segment no-speech probability (the <|nospeech|> token
// posterior) in [0, 1]. Only the whisper backend populates it; other backends
// and out-of-range indices return the -1.0 sentinel ("no data").
CRISPASR_SESSION_API float crispasr_session_result_segment_no_speech_prob(crispasr_session_result* r, int i_seg);
// Per-frame CTC logits (opted in via crispasr_session_set_return_logits) for
// backends that produce a dense CTC grid (Omni CTC, wav2vec2/hubert/data2vec,
// canary-ctc). Frame-major: logits[t * n_logit_vocab + v]. Raw pre-softmax for
// Omni & wav2vec2; log-probabilities for canary-ctc. _logits returns NULL when
// none captured.
CRISPASR_SESSION_API int crispasr_session_result_n_logit_frames(crispasr_session_result* r);
CRISPASR_SESSION_API int crispasr_session_result_n_logit_vocab(crispasr_session_result* r);
CRISPASR_SESSION_API const float* crispasr_session_result_logits(crispasr_session_result* r);
CRISPASR_SESSION_API void crispasr_session_result_free(crispasr_session_result* r);
CRISPASR_SESSION_API crispasr_stream* crispasr_session_stream_open(crispasr_session* s, int n_threads, int step_ms,
                                                                   int length_ms, int keep_ms, const char* language,
                                                                   int translate);
CRISPASR_SESSION_API void crispasr_session_close(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_set_return_logits(crispasr_session* s, int enable);